--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-12 Fri 17:49]
+#+CAPTION: Clock summary at [2019-04-13 Sat 12:30]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *39:17* |       |      | 100.0 |
+| *Total time*                                           | *41:25* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 39:17   |       |      | 100.0 |
-| Active                                                 |         | 39:17 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 4:21 |  11.1 |
-| Sprint and product backlog grooming                    |         |       | 2:12 |   5.6 |
-| Create a video demo for the previous sprint's features |         |       | 1:35 |   4.0 |
-| Fix issues with emacs                                  |         |       | 2:01 |   5.1 |
+| Stories                                                | 41:25   |       |      | 100.0 |
+| Active                                                 |         | 41:25 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 4:21 |  10.5 |
+| Sprint and product backlog grooming                    |         |       | 2:12 |   5.3 |
+| Create a video demo for the previous sprint's features |         |       | 1:35 |   3.8 |
+| Fix issues with emacs                                  |         |       | 2:01 |   4.9 |
 | Fix issues with nightly build                          |         |       | 0:08 |   0.3 |
-| Add diffing support to string asserter                 |         |       | 1:00 |   2.5 |
-| C# generation is borked                                |         |       | 4:12 |  10.7 |
-| Reactivate the boilerplate tests                       |         |       | 5:58 |  15.2 |
-| Update to clang8                                       |         |       | 0:11 |   0.5 |
-| Fix snags with emacs                                   |         |       | 5:27 |  13.9 |
-| Profiles as meta-model elements                        |         |       | 8:01 |  20.4 |
-| Great configuration rename                             |         |       | 4:11 |  10.6 |
+| Add diffing support to string asserter                 |         |       | 1:00 |   2.4 |
+| C# generation is borked                                |         |       | 4:12 |  10.1 |
+| Reactivate the boilerplate tests                       |         |       | 5:58 |  14.4 |
+| Update to clang8                                       |         |       | 0:11 |   0.4 |
+| Fix snags with emacs                                   |         |       | 5:27 |  13.2 |
+| Profiles as meta-model elements                        |         |       | 8:01 |  19.4 |
+| Great configuration rename                             |         |       | 6:19 |  15.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -598,6 +598,8 @@ Notes:
 
 *** STARTED Great configuration rename                                :story:
     :LOGBOOK:
+    CLOCK: [2019-04-13 Sat 10:52]--[2019-04-13 Sat 12:30] =>  1:38
+    CLOCK: [2019-04-13 Sat 06:03]--[2019-04-13 Sat 06:33] =>  0:30
     CLOCK: [2019-04-12 Fri 17:41]--[2019-04-12 Fri 17:49] =>  0:08
     CLOCK: [2019-04-12 Fri 17:27]--[2019-04-12 Fri 17:40] =>  0:13
     CLOCK: [2019-04-12 Fri 17:06]--[2019-04-12 Fri 17:26] =>  0:20
