--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-14 Sun 15:09]
+#+CAPTION: Clock summary at [2019-04-15 Mon 17:41]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *48:45* |       |       | 100.0 |
+| *Total time*                                           | *52:21* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 48:45   |       |       | 100.0 |
-| Active                                                 |         | 48:45 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  4:21 |   8.9 |
-| Sprint and product backlog grooming                    |         |       |  4:24 |   9.0 |
-| Create a video demo for the previous sprint's features |         |       |  1:35 |   3.2 |
-| Fix issues with emacs                                  |         |       |  2:01 |   4.1 |
+| Stories                                                | 52:21   |       |       | 100.0 |
+| Active                                                 |         | 52:21 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  4:21 |   8.3 |
+| Sprint and product backlog grooming                    |         |       |  4:24 |   8.4 |
+| Create a video demo for the previous sprint's features |         |       |  1:35 |   3.0 |
+| Fix issues with emacs                                  |         |       |  2:01 |   3.9 |
 | Fix issues with nightly build                          |         |       |  0:08 |   0.3 |
-| Add diffing support to string asserter                 |         |       |  1:00 |   2.1 |
-| C# generation is borked                                |         |       |  4:12 |   8.6 |
-| Reactivate the boilerplate tests                       |         |       |  5:58 |  12.2 |
+| Add diffing support to string asserter                 |         |       |  1:00 |   1.9 |
+| C# generation is borked                                |         |       |  4:12 |   8.0 |
+| Reactivate the boilerplate tests                       |         |       |  5:58 |  11.4 |
 | Update to clang8                                       |         |       |  0:11 |   0.4 |
-| Fix snags with emacs                                   |         |       |  5:50 |  12.0 |
-| Profiles as meta-model elements                        |         |       |  8:01 |  16.4 |
-| Redesign annotations model                             |         |       | 11:04 |  22.7 |
+| Fix snags with emacs                                   |         |       |  5:50 |  11.1 |
+| Profiles as meta-model elements                        |         |       |  8:01 |  15.3 |
+| Redesign annotations model                             |         |       | 14:40 |  28.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -603,6 +603,7 @@ Notes:
 
 *** STARTED Redesign annotations model                                :story:
     :LOGBOOK:
+    CLOCK: [2019-04-15 Mon 14:05]--[2019-04-15 Mon 17:41] =>  3:36
     CLOCK: [2019-04-13 Sat 14:38]--[2019-04-13 Sat 17:41] =>  3:03
     CLOCK: [2019-04-13 Sat 12:55]--[2019-04-13 Sat 14:37] =>  1:42
     CLOCK: [2019-04-13 Sat 10:52]--[2019-04-13 Sat 12:30] =>  1:38
